--- a/apps.html
+++ b/apps.html
@@ -45,6 +45,11 @@
                 <h2>PDF to Word Converter</h2>
                 <p>Turn any PDF into an editable Word document, all inside your browser.</p>
             </a>
+            <a href="gemini-stock-advisor.html" class="app-card">
+                <i class="fas fa-chart-area"></i>
+                <h2>Gemini Stock Advisor</h2>
+                <p>Ask Gemini for a six-month stock outlook and see projected prices in a chart.</p>
+            </a>
             <a href="tagalog-wordle.html" class="app-card">
                 <i class="fas fa-language"></i>
                 <h2>Salitang Hulaan</h2>
