--- a/gemini-stock-advisor.html
+++ b/gemini-stock-advisor.html
@@ -118,6 +118,8 @@
                 callback: (value) => new Intl.NumberFormat('en-US', { style: 'currency', currency: 'USD', maximumFractionDigits: 2 }).format(value),
               },
               grid: { color: 'rgba(107, 68, 35, 0.08)' },
+              suggestedMin: undefined,
+              suggestedMax: undefined,
             },
             x: {
               grid: { display: false },
@@ -222,14 +224,44 @@ Use realistic market reasoning. Respond with JSON fenced in triple backticks.`;
        * @param {{month: string, price: number}[]} points
        * @param {string} currency
        */
+      function toMonthLabel(monthValue, fallbackIndex) {
+        if (typeof monthValue === 'string') {
+          const parsed = new Date(monthValue);
+          if (!Number.isNaN(parsed.getTime())) {
+            return parsed.toLocaleDateString('en-US', { month: 'short', year: 'numeric' });
+          }
+        }
+        const base = new Date();
+        base.setMonth(base.getMonth() + fallbackIndex);
+        return base.toLocaleDateString('en-US', { month: 'short', year: 'numeric' });
+      }
+
       function renderChart(points, currency) {
-        projectionChart.data.labels = points.map((point) => point.month);
-        projectionChart.data.datasets[0].data = points.map((point) => point.price);
+        const sanitized = points
+          .map((point, index) => ({
+            label: toMonthLabel(point.month, index),
+            price: Number(point.price),
+          }))
+          .filter((item) => Number.isFinite(item.price) && item.price >= 0);
+
+        if (!sanitized.length) {
+          throw new Error('Gemini returned invalid pricing data. Try again.');
+        }
+
+        const prices = sanitized.map((item) => item.price);
+        const [minPrice, maxPrice] = [Math.min(...prices), Math.max(...prices)];
+        const spread = Math.max(maxPrice - minPrice, (maxPrice || 1) * 0.1);
+        const padding = spread * 0.15;
+
+        projectionChart.data.labels = sanitized.map((item) => item.label);
+        projectionChart.data.datasets[0].data = prices;
         projectionChart.options.scales.y.ticks.callback = (value) => new Intl.NumberFormat('en-US', {
           style: 'currency',
           currency: currency.toUpperCase() === 'PHP' ? 'PHP' : 'USD',
           maximumFractionDigits: 2,
         }).format(value);
+        projectionChart.options.scales.y.suggestedMin = Math.max(0, minPrice - padding);
+        projectionChart.options.scales.y.suggestedMax = maxPrice + padding;
         projectionChart.update();
       }
 
