--- a/apps.html
+++ b/apps.html
@@ -48,7 +48,7 @@
             <a href="gemini-stock-advisor.html" class="app-card">
                 <i class="fas fa-chart-area"></i>
                 <h2>Gemini Stock Advisor</h2>
-                <p>Ask Gemini for a six-month stock outlook and see projected prices in a chart.</p>
+                <p>Ask Gemini for a 7-day stock outlook with daily guidance and price targets.</p>
             </a>
             <a href="tagalog-wordle.html" class="app-card">
                 <i class="fas fa-language"></i>
