--- a/gemini-stock-advisor.html
+++ b/gemini-stock-advisor.html
@@ -68,7 +68,7 @@
 
   <script>
     (function () {
-      const API_URL = 'https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-pro:generateContent';
+      const API_URL = 'https://generativelanguage.googleapis.com/v1beta/models/gemini-pro:generateContent';
       const GEMINI_API_KEY = 'AIzaSyAi9o1H0rBWqafr5k3op4_iKEn5q80c2Rc'; // TODO: replace this string with your real Gemini API key
       const analyzeBtn = document.getElementById('analyzeBtn');
       const clearBtn = document.getElementById('clearBtn');
