--- a/apps.html
+++ b/apps.html
@@ -50,6 +50,11 @@
                 <h2>Gemini Stock Advisor</h2>
                 <p>Ask Gemini for a 7-day stock outlook with daily guidance and price targets.</p>
             </a>
+            <a href="reviewer.html" class="app-card">
+                <i class="fas fa-graduation-cap"></i>
+                <h2>Reviewer</h2>
+                <p>Generate AI-powered study cards and randomized quizzes for any topic.</p>
+            </a>
             <a href="tagalog-wordle.html" class="app-card">
                 <i class="fas fa-language"></i>
                 <h2>Salitang Hulaan</h2>
