--- a/reviewer.html
+++ b/reviewer.html
@@ -23,6 +23,26 @@
       </div>
 
       <div class="form-field">
+        <label for="pdfInput">Attach a PDF (optional)</label>
+        <p class="field-hint">Upload lecture notes, reviewers, or any PDF under 10&nbsp;MB. We'll extract the text locally and include the highlights in your prompt.</p>
+        <input id="pdfInput" type="file" accept="application/pdf" />
+        <div class="pdf-status" id="pdfStatus" hidden>
+          <div>
+            <p id="pdfStatusText"></p>
+            <p class="field-hint" id="pdfMetaText"></p>
+          </div>
+          <button type="button" id="clearPdfBtn" class="ghost-button btn-compact">Remove PDF</button>
+        </div>
+        <div class="pdf-options" id="pdfOptions" hidden>
+          <label class="checkbox-inline">
+            <input type="checkbox" id="includePdfToggle" checked />
+            <span>Blend uploaded PDF text with my prompt</span>
+          </label>
+          <p class="field-hint">Gemini will receive both your typed topic and a condensed excerpt from the PDF.</p>
+        </div>
+      </div>
+
+      <div class="form-field">
         <label for="questionPreset">How many questions?</label>
         <div class="count-control">
           <select id="questionPreset">
@@ -80,6 +100,7 @@
     </section>
   </div>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js" integrity="sha512-1+TpoA3nk9/J1GhFp1cV+LDVOGBev5nYeD1yfknhk+aoCA8DmF5asJ5AZt0pOEtpJR/YWZLxE+nobVhtSGcVw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script>
     (() => {
       const API_URL = 'https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent';
@@ -88,6 +109,13 @@
       const topicInput = document.getElementById('topicInput');
       const questionPreset = document.getElementById('questionPreset');
       const customCountInput = document.getElementById('customCount');
+      const pdfInput = document.getElementById('pdfInput');
+      const pdfStatus = document.getElementById('pdfStatus');
+      const pdfStatusText = document.getElementById('pdfStatusText');
+      const pdfMetaText = document.getElementById('pdfMetaText');
+      const pdfOptions = document.getElementById('pdfOptions');
+      const includePdfToggle = document.getElementById('includePdfToggle');
+      const clearPdfBtn = document.getElementById('clearPdfBtn');
       const generateBtn = document.getElementById('generateBtn');
       const resetBtn = document.getElementById('resetBtn');
       const statusBox = document.getElementById('statusBox');
@@ -99,12 +127,19 @@
       const quizCountLabel = document.getElementById('quizCountLabel');
 
       const STORAGE_KEY = 'reviewerQuizData';
+      const PDF_SIZE_LIMIT = 10 * 1024 * 1024; // 10 MB
+      const PDF_SNIPPET_CHARS = 8000;
+      if (window.pdfjsLib) {
+        pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.worker.min.js';
+      }
 
       const state = {
         reviewerEntries: [],
         quizItems: [],
         topic: '',
         questionCount: 0,
+        pdfText: '',
+        pdfMeta: null,
       };
 
       /**
@@ -118,6 +153,93 @@
         const toneLabel = tone === 'success' ? 'Ready' : tone === 'error' ? 'Issue detected' : 'Working';
         statusBox.querySelector('strong').innerHTML = `<i class="fas ${toneIcon}"></i>&nbsp;${toneLabel}`;
         statusBox.querySelector('p').textContent = message;
+      };
+
+      const sanitizeText = (text) => (text || '').replace(/\s+/g, ' ').trim();
+
+      const formatFileSize = (bytes) => `${(bytes / (1024 * 1024)).toFixed(2)} MB`;
+
+      const setPdfStatus = (message, { meta = '', tone = 'info', show = true } = {}) => {
+        if (!show) {
+          pdfStatus.hidden = true;
+          pdfStatusText.textContent = '';
+          pdfMetaText.textContent = '';
+          return;
+        }
+        pdfStatus.hidden = false;
+        pdfStatus.dataset.tone = tone;
+        pdfStatusText.textContent = message;
+        if (meta) {
+          pdfMetaText.hidden = false;
+          pdfMetaText.textContent = meta;
+        } else {
+          pdfMetaText.hidden = true;
+          pdfMetaText.textContent = '';
+        }
+      };
+
+      const clearPdfSelection = (clearInput = true) => {
+        if (clearInput) {
+          pdfInput.value = '';
+        }
+        state.pdfText = '';
+        state.pdfMeta = null;
+        includePdfToggle.checked = true;
+        includePdfToggle.disabled = true;
+        pdfOptions.hidden = true;
+        setPdfStatus('', { show: false });
+      };
+
+      const extractPdfText = async (file) => {
+        const arrayBuffer = await file.arrayBuffer();
+        const pdf = await pdfjsLib.getDocument({ data: arrayBuffer }).promise;
+        let combined = '';
+        for (let pageNumber = 1; pageNumber <= pdf.numPages; pageNumber += 1) {
+          const page = await pdf.getPage(pageNumber);
+          const textContent = await page.getTextContent();
+          const pageText = textContent.items.map((item) => item.str).join(' ');
+          combined += ` ${pageText}`;
+          if (combined.length >= PDF_SNIPPET_CHARS) {
+            break;
+          }
+        }
+        const snippet = sanitizeText(combined).slice(0, PDF_SNIPPET_CHARS);
+        return { text: snippet, pages: pdf.numPages };
+      };
+
+      const handlePdfChange = async () => {
+        const file = pdfInput.files?.[0];
+        if (!file) {
+          clearPdfSelection(false);
+          return;
+        }
+        if (file.size > PDF_SIZE_LIMIT) {
+          clearPdfSelection(false);
+          setPdfStatus('PDF exceeds the 10 MB limit. Please choose a smaller file.', { tone: 'error' });
+          pdfStatus.hidden = false;
+          return;
+        }
+
+        setPdfStatus('Extracting text from PDF…', { tone: 'info' });
+        try {
+          const { text, pages } = await extractPdfText(file);
+          if (!text) {
+            throw new Error('No extractable text found in the PDF.');
+          }
+          state.pdfText = text;
+          state.pdfMeta = { name: file.name, pages, size: file.size };
+          includePdfToggle.disabled = false;
+          includePdfToggle.checked = true;
+          pdfOptions.hidden = false;
+          setPdfStatus('PDF ready. We will include key snippets unless you disable it below.', {
+            meta: `${file.name} • ${pages} page(s) • ${formatFileSize(file.size)}`,
+            tone: 'info',
+          });
+        } catch (error) {
+          console.error('Failed to read PDF', error);
+          clearPdfSelection(false);
+          setPdfStatus(error.message || 'Unable to read PDF contents.', { tone: 'error' });
+        }
       };
 
       const toggleCustomCount = () => {
@@ -155,7 +277,17 @@
        * @param {number} count
        * @returns {string}
        */
-      const buildPrompt = (topic, count) => `You are an expert study coach. Create a reviewer and matching multiple-choice quiz about: ${topic}.
+      const buildPrompt = (topic, count, pdfSnippet) => {
+        const topicDirective = topic ? `Study request: ${topic}.` : 'Study request: derive the most important takeaways from the provided reference.';
+        const referenceBlock = pdfSnippet
+          ? `Reference excerpt (keep confidential, summarize it for the learner):
+"""
+${pdfSnippet}
+"""`
+          : 'No reference excerpt uploaded — rely on the study request alone.';
+
+        return `You are an expert study coach. ${topicDirective}
+${referenceBlock}
 Return ONLY a JSON object inside one fenced code block using this schema:
 {
   "reviewerEntries": [
@@ -170,6 +302,7 @@ Guidelines:
 - Definitions must stay under 60 words, plain English, still mention critical domain jargon.
 - Each quiz question needs 4 concise, distinct choices. answerIndex is the zero-based correct choice.
 - Use neutral, factual tone. Avoid markdown, LaTeX, or stray commentary.`;
+      };
 
       /**
        * Calls Gemini and returns structured data.
@@ -178,7 +311,7 @@ Guidelines:
        * @param {string} apiKey
        * @returns {Promise<{ reviewerEntries: any[]; quizItems: any[]; }>}
        */
-      const requestGeminiReviewer = async (topic, count, apiKey) => {
+      const requestGeminiReviewer = async (topic, count, pdfSnippet, apiKey) => {
         const response = await fetch(`${API_URL}?key=${encodeURIComponent(apiKey)}`, {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
@@ -186,7 +319,7 @@ Guidelines:
             contents: [
               {
                 role: 'user',
-                parts: [{ text: buildPrompt(topic, count) }],
+                parts: [{ text: buildPrompt(topic, count, pdfSnippet) }],
               },
             ],
             safetySettings: [
@@ -298,9 +431,10 @@ Guidelines:
       hydrateFromStorage();
 
       generateBtn.addEventListener('click', async () => {
-        const topic = topicInput.value.trim();
-        if (!topic) {
-          updateStatus('Describe the topic you want to review.', 'error');
+        const typedTopic = topicInput.value.trim();
+        const pdfSnippet = includePdfToggle.checked && state.pdfText ? state.pdfText : '';
+        if (!typedTopic && !pdfSnippet) {
+          updateStatus('Describe a topic or attach a PDF before generating.', 'error');
           return;
         }
         if (!GEMINI_API_KEY?.trim()) {
@@ -321,14 +455,14 @@ Guidelines:
         resetBtn.disabled = true;
 
         try {
-          const payload = await requestGeminiReviewer(topic, questionCount, GEMINI_API_KEY);
+          const payload = await requestGeminiReviewer(typedTopic, questionCount, pdfSnippet, GEMINI_API_KEY);
           state.reviewerEntries = payload.reviewerEntries;
           state.quizItems = payload.quizItems;
-          state.topic = topic;
+          state.topic = typedTopic || (state.pdfMeta ? `Notes from ${state.pdfMeta.name}` : 'Custom topic');
           state.questionCount = questionCount;
           renderReviewer(payload.reviewerEntries);
           localStorage.setItem(STORAGE_KEY, JSON.stringify({
-            topic,
+            topic: state.topic,
             generatedAt: new Date().toISOString(),
             questionCount,
             reviewerEntries: payload.reviewerEntries,
@@ -349,6 +483,7 @@ Guidelines:
         topicInput.value = '';
         questionPreset.value = '10';
         toggleCustomCount();
+        clearPdfSelection();
         reviewerSection.hidden = true;
         reviewerList.innerHTML = '';
         quizCta.hidden = true;
@@ -367,6 +502,17 @@ Guidelines:
           return;
         }
         window.location.href = 'reviewer-quiz.html';
+      });
+
+      pdfInput.addEventListener('change', handlePdfChange);
+      clearPdfBtn.addEventListener('click', () => {
+        clearPdfSelection();
+        setPdfStatus('Removed the PDF. Only your typed topic will be sent to Gemini.', { tone: 'info', show: true });
+      });
+      includePdfToggle.addEventListener('change', () => {
+        if (!state.pdfText && includePdfToggle.checked) {
+          includePdfToggle.checked = false;
+        }
       });
     })();
   </script>
