--- a/reviewer.html
+++ b/reviewer.html
@@ -102,14 +102,15 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js" integrity="sha512-1+TpoA3nk9/J1GhFp1cV+LDVOGBev5nYeD1yfknhk+aoCA8DmF5asJ5AZt0pOEtpJR/YWZLxE+nobVhtSGcVw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script>
-    // Wait for PDF.js to load before initializing
-    window.addEventListener('DOMContentLoaded', () => {
-      if (window.pdfjsLib) {
-        pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.worker.min.js';
+    window.addEventListener('load', () => {
+      if (!window.pdfjsLib) {
+        console.error('PDF.js failed to load. Please check the CDN URL.');
+        return;
       }
-    });
 
-    (() => {
+      pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.worker.min.js';
+
+      (() => {
       const API_URL = 'https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent';
       const GEMINI_API_KEY = 'AIzaSyAi9o1H0rBWqafr5k3op4_iKEn5q80c2Rc'; // TODO: Replace with your Gemini API key.
 
@@ -511,17 +512,18 @@ Guidelines:
         window.location.href = 'reviewer-quiz.html';
       });
 
-      pdfInput.addEventListener('change', handlePdfChange);
-      clearPdfBtn.addEventListener('click', () => {
-        clearPdfSelection();
-        setPdfStatus('Removed the PDF. Only your typed topic will be sent to Gemini.', { tone: 'info', show: true });
-      });
-      includePdfToggle.addEventListener('change', () => {
-        if (!state.pdfText && includePdfToggle.checked) {
-          includePdfToggle.checked = false;
-        }
-      });
-    })();
+        pdfInput.addEventListener('change', handlePdfChange);
+        clearPdfBtn.addEventListener('click', () => {
+          clearPdfSelection();
+          setPdfStatus('Removed the PDF. Only your typed topic will be sent to Gemini.', { tone: 'info', show: true });
+        });
+        includePdfToggle.addEventListener('change', () => {
+          if (!state.pdfText && includePdfToggle.checked) {
+            includePdfToggle.checked = false;
+          }
+        });
+      })();
+    });
   </script>
 </body>
 </html>
